# correlated_timeseries_confidence_intervals

./: .gitignore  1.md  Makefile  README.md  README.rst  confidence_interval.py  correlated_ts_ci.py  pyproject.toml  requirements_dev.txt
correlated_ts_ci/: correlated_ts_ci.py
tests/: test_col1_no_vary_prefactor.json  test_col1_vary_prefactor.json  test_correlated_ts_ci.py
