[tool.poetry]
name = "correlated_timeseries_confidence_intervals"
version = "0.1.0"
description = "Estimate confidence intervals in means of correlated time series with a small number of effective samples (like molecular dynamics simulations). If your time series is long enough that the standard error levels off completely as a function of block length, then this method is overkill and simply using a block bootstrap sampling with a sufficiently large block length is probably sufficient."
authors = ["Brian Novak <bnovak1@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arch = "^4.16.1"
joblib = "^0.17.0"
lmfit = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
